--- a/css/main.scss
+++ b/css/main.scss
@@ -70,7 +70,7 @@ menu{
 	position: fixed;
 	top: 0px;
 	svg{
-		stroke-width: 0.15rem; 
+		stroke-width: 0.18rem; 
 		stroke: $dark-purple; 
 		fill: white; 
 		&:hover path, 
@@ -161,9 +161,9 @@ section{
 		}
 	}
 	img.plant{
-		z-index: 10;
 		position: absolute;
 		&#spider{
+			z-index:10;
 			width: 40%;
 			top: 0px; 
 			left: 5%;
@@ -214,7 +214,9 @@ section{
 		padding-bottom: 10rem;
 		img{
 			width: 100%;
+
 		}
+
 	}
 }
 
@@ -339,6 +341,14 @@ section{
 	#work{
 		#workcontent img{
 			width: 30%; 
+			&:hover{
+				border-radius: 50%;
+				box-sizing: border-box;
+			    -moz-box-sizing: border-box;
+			    -webkit-box-sizing: border-box;
+				border: 0.2rem solid $dark-purple;
+				background: $highlight;
+			}
 		}
 	}
 	#project{
