--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ html {
 h2 {
   font-family: "Averia Sans Libre", sans-serif;
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 6rem;
+  line-height: 5.6rem;
   font-weight: 400;
   text-stroke: 1px #292b87;
   -webkit-text-stroke: 1px #292b87;
@@ -37,6 +38,7 @@ blockquote {
 a {
   font-family: "Averia Serif Libre", sans-serif;
   font-weight: 700;
+  font-size: 4rem;
   letter-spacing: -0.08rem;
   text-decoration: none;
   color: #220689; }
@@ -192,7 +194,7 @@ section {
     position: relative;
     width: 75%;
     top: 20.5rem;
-    left: 10rem; }
+    left: 5%; }
   #about img {
     position: absolute;
     bottom: 2rem;
@@ -205,7 +207,7 @@ section {
   #project #projectcontent {
     position: relative;
     width: 75%;
-    left: 10rem;
+    left: 5%;
     padding-top: 20.5rem;
     padding-bottom: 20rem; }
     #project #projectcontent div.img-group {
