--- a/css/main.scss
+++ b/css/main.scss
@@ -284,6 +284,7 @@ section{
 	}
 }
 
+
 @media (min-width: 800px) and (orientation: landscape){
 	p, blockquote{
 		font-size: 2.4rem;
@@ -478,3 +479,20 @@ section{
 
 }
 
+
+@media (hover: none){
+	#work #workcontent{
+		a{
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			img{
+				opacity: 0.6;
+			}
+			div.overlay{
+				display: block;
+				position: absolute;
+			}
+		}
+	}
+}
